make-a-wish-salesforce/src/objects/Conflict_Of_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>It will used as a hidden field to store account email to merge in the email template</description>
        <label>Hidden Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>This Field is used as hidden field in COI Email template</description>
        <label>Hidden Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>It holds the value of Account Phone</description>
        <label>Hidden Account Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check weather this conflict of interest is active or not.</description>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>This field is used to store the value of expiration date.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>It holds the Id of External System.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HiddenConflictExpire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when the conflict of Interest record get expire.</description>
        <label>Hidden Conflict Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_COI_Volunteer_FirstName__c</fullName>
        <formula>Volunteer_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden COI Volunteer FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Trigger_COI_Exp_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to fire the COI expiration notification email to volunteers</description>
        <label>Hidden Trigger COI Exp Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Volunteer_Contact_Email__c</fullName>
        <description>This field is used as hidden field to store volunteer contact email in COI.</description>
        <label>Hidden Volunteer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <description>IMPORT ID</description>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will indicate that records created manually or imported from RE.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>ID, IMPORT_ID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Signed_Date__c</fullName>
        <description>DATE_COMPLETED</description>
        <label>RE Signed Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_Date__c</fullName>
        <description>This field is used to store the value of signed date.</description>
        <label>Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Record_Count__c</fullName>
        <description>Enables better record counting functions on reports.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolunteerRoleOutofCompliance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether the volunteer has at least one volunteer role with the status of out of compliance</description>
        <label>Volunteer Role(Out of Compliance)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VolunteerRoleTrainedTpendChapReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether the volunteer has at least one volunteer role with the status of trained,trainning pending or chapter review</description>
        <label>Volunteer Role(Trained,Tpend,ChapReview)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is used store the value of the volunteer contact.</description>
        <label>Volunteer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Conflict Of Interest</relationshipLabel>
        <relationshipName>Conflict_Of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It activates when the volunteer becomes inactive or all affiliations records are inactive status.</description>
        <label>Hidden Volunteer is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Conflict Of Interest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Contact__c</columns>
        <columns>Signed_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COI -{0000}</displayFormat>
        <label>Conflict Of Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conflict Of Interest</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>Chapter_Staff__c</fullName>
        <label>Chapter_Staff</label>
    </sharingReasons>
</CustomObject>